<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="l_path">Game folder location:</string>
    <string name="l_args">Server command line arguments:</string>
	
	<string name="launcher_head" translatable="false">XashDS</string>
	<string name="master_head">XashDS settings</string>
	
	<string name="b_start_launch">Start!</string>
	<string name="b_start_stop">Stop!</string>
	
	<string name="b_refresh_cache">Refresh files</string>
	
	<string name="b_master">Server wizard</string>

	<string name="b_about">About</string>
	
	<string name="b_scut">Create shortcut</string>
	
	<string name="b_clean">Clear log</string>
	
	<string name="b_newxash">Use new XashDS</string>
	
	<string name="b_settings">Settings...</string>
	
	<string name="b_close">Close</string>
	
	<string name="b_select">Select...</string>
	
	<string name="b_start_xash">Join game...</string>
	
	<string name="b_start_xash_connect">Use \"+connect\"</string>
	<string name="b_start_xash_hacks">Use xashds hacks</string>

	<string name="l_notfound">No matching files found</string>

	<string name="l_game">Game or mod folder</string>
	<string name="l_dlls">Server DLL\'s</string>
	<string name="l_map">Start map</string>
	<string name="l_rcon">Remote control (rcon) password</string>
	
	<string name="l_scut_name">Shortcut name: </string>
	<string name="l_scut_gamel">Launch game after server start</string>
	<string name="l_scut_gamem1">Via \"+connect\"</string>
	<string name="l_scut_gamem2">Via xashds_hacks</string>
	
	<string name="h_map">For example: crossfire</string>
	<string name="h_dlls">For example: dlls/decay.dll</string>
	<string name="h_game">For example: gearbox; decay</string>
	<string name="h_cmd">Type command here</string>

	<string name="v_isdev">Enable developer mode</string>
	<string name="v_isconsole">Enable console</string>
	<string name="v_islog">Enable log:</string>
	<string name="v_iscoop">Enable coop</string>
	<string name="v_ispublic">Internet server</string>
	<string name="v_islan">LAN server</string>

	<string name="pr_basedir">Game folder location</string>
	<string name="pr_maxloglength">Maximum log lines to store</string>

	<string name="t_about1">XashDS Andoid (v1.2-forked)\nOriginal app by: mittorn (FWGS team)\nFork by: GregTheMadMonk (Greg)\n\nSpecial thanks to:\n-Uncle Mike for Xash3D\n-FWGS team for Xash3D FWGS and first XashDS\n-Valve for Half-Life and GoldSrc</string>
	<string name="l_remdlls">Clear DLL\'s</string>
	<string name="l_newxash_s">Experimental new XashDS binary from 0.19.x-server</string>
	<string name="l_translator">Select translator</string>
	<string name="l_appsettings">App setttings</string>
	<string name="pr_maxloglines_s">0 to store all messages in memory</string>
</resources>
