<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/l_appsettings">
		<Preference
			android:key="basedir"
			android:title="@string/pr_basedir"
			/>
		<CheckBoxPreference
			android:key="newxash"
			android:title="@string/b_newxash"
			android:summary="@string/l_newxash_s"/>
		<ListPreference
			android:key="translator"
			android:title="@string/l_translator"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/b_master">
		<EditTextPreference
			android:key="argv"
			android:title="@string/l_args"
			/>
		<Preference
			android:key="s_game"
			android:title="@string/l_game"
			/>
		<Preference
			android:key="s_dll"
			android:title="@string/l_dlls"
				/>
		<Preference
			android:key="s_remdlls"
			android:title="@string/l_remdlls"
			/>
		<Preference
			android:key="s_map"
			android:title="@string/l_map"
			/>
		<EditTextPreference
			android:key="s_rcon"
			android:title="@string/l_rcon"
			/>
		<CheckBoxPreference
			android:key="s_dev"
			android:title="@string/v_isdev"
			/>
		<CheckBoxPreference
			android:key="s_console"
			android:title="@string/v_isconsole"
			/>
		<CheckBoxPreference
			android:key="s_log"
			android:defaultValue="false"
			android:title="@string/v_islog"
			android:enabled="false"
			/>
		<CheckBoxPreference
			android:key="s_coop"
			android:title="@string/v_iscoop"
			/>
		<CheckBoxPreference
			android:key="s_public"
			android:title="@string/v_ispublic"
			/>
	</PreferenceCategory>
</PreferenceScreen>
