<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/l_args"
		android:id="@+id/lnch_info"
		android:visibility="gone"/>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/startButton"
			android:visibility="gone"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/b_start_xash"
			android:id="@+id/startXash"
			android:visibility="gone"/>

	</LinearLayout>

	<AutoCompleteTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:maxLines="1"
		android:inputType="text"
		android:id="@+id/cmdLine"
		android:hint="@string/h_cmd"/>

	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:id="@+id/logScroll">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:id="@+id/logOutput"/>

	</ScrollView>

</LinearLayout>

